# quandary

./: .gitignore  CMakeLists.txt  README.md  annotated.html  classBSpline0-members.html  classBSpline0.html  classBSpline0__coll__graph.md5  classBSpline0__inherit__graph.map  classBSpline2nd-members.html  classBSpline2nd.html  classBSpline2ndAmplitude-members.html  classBSpline2ndAmplitude.html  classBSpline2ndAmplitude__coll__graph.map  classBSpline2ndAmplitude__inherit__graph.md5  classBSpline2nd__coll__graph.md5  classBSpline2nd__inherit__graph.map  classConstantTransferFunction-members.html  classConstantTransferFunction.html  classConstantTransferFunction__coll__graph.map  classConstantTransferFunction__inherit__graph.md5  classControlBasis-members.html  classControlBasis.html  classControlBasis__inherit__graph.map  classControlBasis__inherit__graph.md5  classCosineTransferFunction-members.html  classCosineTransferFunction.html  classCosineTransferFunction__inherit__graph.map  classCosineTransferFunction__inherit__graph.md5  classIdentityTransferFunction-members.html  classIdentityTransferFunction.html  classIdentityTransferFunction__coll__graph.md5  classIdentityTransferFunction__inherit__graph.map  classSineTransferFunction-members.html  classSineTransferFunction.html  classSineTransferFunction__coll__graph.map  classSineTransferFunction__coll__graph.md5  classStep-members.html  classStep.html  classStep__coll__graph.md5  classStep__inherit__graph.map  (+18 more)
.ci-scripts/: build_and_test.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  deploy-doxygen.yml  docker-build-and-push.yml  test-macos.yml  test-windows.yml  test.yml
.gitlab/: custom-jobs-and-variables.yml
.spack_env/: spack.yaml
dev/bench/: data.js
include/: controlbasis.hpp
performance_tests/: performance_test.py  test_cases.json
search/: all_1.js  all_12.js  all_3.js  all_d.js  all_e.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  searchdata.js  variables_2.js  variables_3.js  variables_4.js
src/: CMakeLists.txt  main.cpp
